# STM32G4-DRV8301-FOC

./: .mxproject  README.md  STM32G474RETx_Demo_Blink.ioc  STM32G474RETx_Demo_Blink.txt
Core/Inc/: adc.h  fdcan.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h  usart.h
Core/Src/: adc.c  fdcan.c  gpio.c  i2c.c  main.c  stm32g4xx_it.c  tim.c  usart.c  usb.c
Drivers/STM32G4xx_HAL_Driver/: Release_Notes.html
FOC_Related/ABZ/: ABZ.c  ABZ.h
FOC_Related/AS5600/: AS5600.c  AS5600.h
FOC_Related/CONTROL/: control.c  control.h
FOC_Related/FOC/: FOC.c  FOC.h
FOC_Related/LOWPASS_FILTER/: LowPass_Filter.c  LowPass_Filter.h
FOC_Related/PID/: pid.c  pid.h
Hardware/BOOSTXL-DRV8301 Hardware Files/: BOOSTXL-DRV8301_BOM.xls
Hardware/BOOSTXL-DRV8301 Hardware Files/BOOSTXL-DRV8301_DESIGN_FILES/BOOSTXL-DRV8301_DESIGN_FILES/: BOOSTXL-DRV8301.IntLib  BOOSTXL-DRV8301.PcbDoc  BOOSTXL-DRV8301.PcbDoc.htm  BOOSTXL-DRV8301.PrjPcb  BOOSTXL-DRV8301.PrjPcbStructure  DRV8301.SchDoc  LAUNCHPAD.SchDoc  MOTOR.SchDoc  SENSE.SchDoc
Hardware/BOOSTXL-DRV8301 Hardware Files/BOOSTXL-DRV8301_GERBERS/BOOSTXL-DRV8301_GERBERS/Gerber/: BOOSTXL-DRV8301.EXTREP  BOOSTXL-DRV8301.GBL  BOOSTXL-DRV8301.GBO  BOOSTXL-DRV8301.GBP  BOOSTXL-DRV8301.GBS  BOOSTXL-DRV8301.GD1  BOOSTXL-DRV8301.GG1  BOOSTXL-DRV8301.GM1  BOOSTXL-DRV8301.GM10  BOOSTXL-DRV8301.GM12  BOOSTXL-DRV8301.GM2  BOOSTXL-DRV8301.GM5  BOOSTXL-DRV8301.GM6  BOOSTXL-DRV8301.GM9  BOOSTXL-DRV8301.GTL  BOOSTXL-DRV8301.GTO  BOOSTXL-DRV8301.GTP  BOOSTXL-DRV8301.GTS  BOOSTXL-DRV8301.REP  BOOSTXL-DRV8301.RUL  BOOSTXL-DRV8301.apr
Hardware/BOOSTXL-DRV8301 Hardware Files/BOOSTXL-DRV8301_GERBERS/BOOSTXL-DRV8301_GERBERS/NC Drill/: BOOSTXL-DRV8301.DRR  BOOSTXL-DRV8301.LDP  BOOSTXL-DRV8301.TXT
Hardware/BOOSTXL-DRV8301 Hardware Files/BOOSTXL-DRV8301_ODB/BOOSTXL-DRV8301_ODB/: BOOSTXL-DRV8301.REP
Hardware/BOOSTXL-DRV8301 Hardware Files/BOOSTXL-DRV8301_ODB/BOOSTXL-DRV8301_ODB/odb/matrix/: matrix
Hardware/BOOSTXL-DRV8301 Hardware Files/BOOSTXL-DRV8301_ODB/BOOSTXL-DRV8301_ODB/odb/misc/: attrlist
Hardware/BOOSTXL-DRV8301 Hardware Files/BOOSTXL-DRV8301_ODB/BOOSTXL-DRV8301_ODB/odb/steps/pcb/: profile
Hardware/BOOSTXL-DRV8301 Hardware Files/BOOSTXL-DRV8301_ODB/BOOSTXL-DRV8301_ODB/odb/steps/pcb/eda/: data
Hardware/BOOSTXL-DRV8301 Hardware Files/BOOSTXL-DRV8301_ODB/BOOSTXL-DRV8301_ODB/odb/steps/pcb/layers/bottom/: attrlist  features
Hardware/BOOSTXL-DRV8301 Hardware Files/BOOSTXL-DRV8301_ODB/BOOSTXL-DRV8301_ODB/odb/steps/pcb/layers/bottomoverlay/: features
Hardware/BOOSTXL-DRV8301 Hardware Files/BOOSTXL-DRV8301_ODB/BOOSTXL-DRV8301_ODB/odb/steps/pcb/layers/bottompaste/: features
Hardware/BOOSTXL-DRV8301 Hardware Files/BOOSTXL-DRV8301_ODB/BOOSTXL-DRV8301_ODB/odb/steps/pcb/layers/bottomsolder/: features
Hardware/BOOSTXL-DRV8301 Hardware Files/BOOSTXL-DRV8301_ODB/BOOSTXL-DRV8301_ODB/odb/steps/pcb/layers/comp_+_bot/: components
Hardware/BOOSTXL-DRV8301 Hardware Files/BOOSTXL-DRV8301_ODB/BOOSTXL-DRV8301_ODB/odb/steps/pcb/layers/comp_+_top/: components
Hardware/BOOSTXL-DRV8301 Hardware Files/BOOSTXL-DRV8301_ODB/BOOSTXL-DRV8301_ODB/odb/steps/pcb/layers/drill/: features  (+1 more)
Hardware/mb1367_bdp/: readme.txt
Hardware/mb1367_bdp/MB1367C/: 4L2S_Outjob.OutJob  Arduino_extension_connectors.SchDoc  MB1367B.PcbDoc.htm  MB1367C.PcbDoc.htm  MB1367_4L2S_Outjob_for-mechanical drawing.OutJob  Mechanical.SchDoc  Power.SchDoc  Project_overview.SchDoc  STM32_microcontroller_IOs.SchDoc  STM32_microcontroller_power.SchDoc  ST_LINK_V3E.SchDoc  mb1367.PrjPcb  mb1367.PrjPcbVariants  mb1367_Top.SchDoc
MDK-ARM/: .clangd  MDK-ARM.code-workspace  STM32G474RETx_Demo_Blink+STM32G474RETxDemoBlink.cbuild.yml  STM32G474RETx_Demo_Blink+STM32G474RETxDemoBlink.cprj  STM32G474RETx_Demo_Blink.cbuild-idx.yml  STM32G474RETx_Demo_Blink.cbuild-pack.yml  STM32G474RETx_Demo_Blink.cbuild-set.yml  STM32G474RETx_Demo_Blink.cproject.yml  STM32G474RETx_Demo_Blink.csolution.yml  STM32G474RETx_Demo_Blink.uvguix.24670  STM32G474RETx_Demo_Blink.uvguix.Michael_Chemic  STM32G474RETx_Demo_Blink.uvoptx  STM32G474RETx_Demo_Blink.uvprojx  startup_stm32g474xx.lst  vcpkg-configuration.json
MDK-ARM/.eide/: eide.json  stm32g474retx_demo_blink.arm.options.v6.json
MDK-ARM/RTE/_STM32G474RETxDemoBlink/: RTE_Components.h
MDK-ARM/RTE/_STM32G474RETx_Demo_Blink/: RTE_Components.h
MDK-ARM/STM32G474RETx_Demo_Blink/: STM32G474RETx_Demo_Blink.axf  STM32G474RETx_Demo_Blink.build_log.htm  STM32G474RETx_Demo_Blink.hex  STM32G474RETx_Demo_Blink.htm  STM32G474RETx_Demo_Blink.lnp  STM32G474RETx_Demo_Blink.map  STM32G474RETx_Demo_Blink_STM32G474RETx_Demo_Blink.dep  abz.crf  abz.d  adc.crf  adc.d  as5600.crf  as5600.d  control.crf  control.d  dma.crf  dma.d  fdcan.crf  fdcan.d  foc.crf  foc.d  gpio.crf  gpio.d  hall.d  i2c.crf  i2c.d  lowpass_filter.crf  lowpass_filter.d  main.crf  main.d  pid.crf  pid.d  startup_stm32g474xx.d  stm32g4xx_hal.crf  stm32g4xx_hal.d  stm32g4xx_hal_adc.crf  stm32g4xx_hal_adc.d  stm32g4xx_hal_adc_ex.crf  stm32g4xx_hal_adc_ex.d  stm32g4xx_hal_cortex.crf  (+52 more)
MDK-ARM/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
MDK-ARM/tmp/1/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
MDK-ARM/tmp/STM32G474RETx_Demo_Blink+STM32G474RETxDemoBlink/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
MDK-ARM/tmp/STM32G474RETx_Demo_Blink+STM32G474RETxDemoBlink/src/STM32G474RETx_Demo_Blink+STM32G474RETxDemoBlink-stamp/: STM32G474RETx_Demo_Blink+STM32G474RETxDemoBlink-configure-.cmake  STM32G474RETx_Demo_Blink+STM32G474RETxDemoBlink-source_dirinfo.txt
MDK-ARM/tmp/STM32G474RETx_Demo_Blink+STM32G474RETxDemoBlink/tmp/: STM32G474RETx_Demo_Blink+STM32G474RETxDemoBlink-cfgcmd.txt  STM32G474RETx_Demo_Blink+STM32G474RETxDemoBlink-mkdirs.cmake
MDK-ARM/tmp/STM32G474RETx_Demo_Blink/STM32G474RETxDemoBlink/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
Readme/Writerside/: in.tree  redirection-rules.xml
Readme/Writerside/topics/Writerside/topics/: Writerside_topics_starter.md
(+19 files in other folders)
